--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Giftastic</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
 
     <header><h1>Come one, come all, to the <span id="titleName">Amazing Weather Generator!</span></h1></header>
     
-    <button id="button"></button>
+    <button id="buttonSpace"></button>
+
+    <div id="imageSpace">
+    </div>
 
     <form>
         Add a weather type below<br>
-        <input type="text" name="animal"><br>
-        <input type="submit" value="Submit">
+        <input type="text" id="input" ><br>
+        <input type="submit" value="Submit" id="submit">
     </form>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/app.js"></script>
 </body>
 </html>
