--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header><h1>Come one, come all, to the <span id="titleName">Amazing Weather Generator!</span></h1></header>
     
-    <button id="buttonSpace"></button>
+    <div id="buttonSpace"></div>
 
     <div id="imageSpace">
     </div>
